--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://rayanatr.github.io/github-hugo/'
 languageCode = 'en-us'
-title = 'hello world'
+title = 'Le site d'un weeb'
 theme = 'PaperMod'
