--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,4 @@ baseURL = 'https://rayanatr.github.io/github-hugo/'
 languageCode = 'en-us'
 title = 'Le site du weeb'
 theme = 'PaperMod'
+sectionPagesMenu = 'main'
